DevAccount/src/objects/staff__c.object
<CustomObject>
    <fields>
        <fullName>Contact_no__c</fullName>
        <description>Staff contact number</description>
        <inlineHelpText>To view staff contact details</inlineHelpText>
        <label>Contact no</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department name</description>
        <inlineHelpText>To view the department name.</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CSE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>Staff ID</description>
        <inlineHelpText>to view m\staff id</inlineHelpText>
        <label>ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Staff name</description>
        <inlineHelpText>to view staff name</inlineHelpText>
        <label>Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <description>staff salary</description>
        <inlineHelpText>To view the salary of the staff</inlineHelpText>
        <label>Salary</label>
        <precision>13</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>housing__c</fullName>
        <label>Own housing</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>land__c</fullName>
        <label>land</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan_status__c</fullName>
        <label>loan status</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>staff</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>staff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>staffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>